# VCalc

./: .clangd  .gitignore  CMakeLists.txt  LICENSE.md  README.md  a  style-guide.md
grammar/: VCalc.g4
grammar/.antlr/: VCalc.interp  VCalc.tokens  VCalcLexer.interp  VCalcLexer.java  VCalcLexer.tokens  VCalcParser.java
include/: BackEnd.h  CompilerVisitor.h  Type.h  Variable.h
runtime/src/: placeholder.c
src/: BackEnd.cpp  CMakeLists.txt  CompilerVisitor.cpp  main.cpp
